--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "axios": "^1.13.5",
     "body-parser": "^2.2.2",
     "express": "^5.2.1",
-    "node-telegram-bot-api": "^0.67.0"
+    "node-telegram-bot-api": "^0.67.0",
+    "request": "^2.88.2",
+    "sqlite3": "^5.1.7"
   }
 }
